--- a/joe/Wigwamm-Property-Listing-Optimiser/client/Wigwamm-Property-Listing-Optimiser.css
+++ b/joe/Wigwamm-Property-Listing-Optimiser/client/Wigwamm-Property-Listing-Optimiser.css
@@ -9,41 +9,35 @@
     left:0%;
 }
 
-#ranking {
-    padding-top:50px;
-    position:fixed;
+.page {
+    width:10%;
     height:100%;
-    width:70%;
-    left:0%;
-    bottom:0%;
-    z-index:-10;
+    margin-top:0;
+    margin-right:10px;
+    display:inline-block;
+    color:#fff;
+    background-color:#f06d06;
+    border-radius:10px;
+    padding:10px;
 }
 
-#details {
+.pages {
+    max-height:50%;
+    padding:10px;
+    width:100%;
+    overflow-x:scroll;
+    overflow-y:hidden;
+    white-space:nowrap;
     position:fixed;
-    border:2px solid gray;
-    height:50%;
-    width:30%;
-    right:0%;
-    top:50px;
-    z-index:-10;
-}
-
-#graph {
-    position:fixed;
-    border:2px solid gray;
-    height:50%;
-    width:30%;
-    right:0%;
-    bottom:0%;
-    z-index:-10;
+    bottom:0;
 }
 
 form {
     overflow:hidden;
-    height:100%;
+    height:300px%;
     animation:wiggle 0.5s;
-    width: 100%;
+    width: 40%;
+    margin-top:5%;
 }
 
 @keyframes wiggle {
@@ -171,48 +165,24 @@ input:valid {
     font-size:130%;
 }
 
-#ranking {
-    padding-top:70px;
-}
-
-#ranking ul {
-    overflow-y:scroll;
-    height:90%;
-}
-
-#ranking li {
-    font-weight:bold;
-    font-size:130%;
-    list-style-type:none;
+.detailsPad {
+    background-color:#f06d06;
     color:white;
-    margin-top:5px;
-    margin-bottom:5px;
-}
-
-#ranking div {
-    border-radius:10px;
-
-    border: 2px solid #ddd;
     padding:20px;
-    background-color:#f06d06;
-    width:70%;
-    display:inline-block;
+    font-weight:bold;
+    width:30%;
+    max-height:40%;
+    font-size:200%;
 }
 
-.score {
-    border-radius:10px;
-    border: 2px solid #ddd;
-    padding:20px;
-    margin-left:30px;
-    background-color:#f06d06;
-}
-
-.glyphicon-globe, .glyphicon-eye-open {
+.glyphicon {
+    z-index:100;
     margin-right:10px;
 }
 
-.glyphicon-arrow-up, .glyphicon-arrow-down {
+.glyphicon-circle-arrow-up, .glyphicon-circle-arrow-down {
     float:right;
+    font-size:300%;
 }
 
 .pullRight {
