--- a/joe/Wigwamm-Property-Listing-Optimiser/client/Wigwamm-Property-Listing-Optimiser.css
+++ b/joe/Wigwamm-Property-Listing-Optimiser/client/Wigwamm-Property-Listing-Optimiser.css
@@ -1,12 +1,28 @@
 /* CSS declarations go here */
-#scoresBar {
-    position:fixed;
-    top:0%;
-    width:100%;
-    height:50px;
-    background-color:#f06d06;
-    color:#fff;
-    left:0%;
+
+#youThink {
+    margin-left:40px;
+    margin-top:40px;
+}
+
+#details {
+    position:absolute;
+    right:40px;
+    top:40px;
+    text-align:right;
+}
+
+#arrows {
+    margin-top:100px;
+    margin-right:40px;
+    float:right;
+    width:20%;
+    text-align:right;
+}
+
+#arrows .glyphicon {
+    font-size:4em;
+    margin-left:10%;
 }
 
 .page {
@@ -25,33 +41,10 @@
     max-height:50%;
     padding:10px;
     width:100%;
-    overflow-x:scroll;
     overflow-y:hidden;
     white-space:nowrap;
     position:fixed;
     bottom:0;
-}
-
-.title {
-    display:block;
-    text-align:right;
-    float:right;
-    width:100%;
-    color:white;
-    font-weight:bold;
-    padding-top:10px;
-    padding-right:15px;
-    font-size:130%;
-}
-
-.detailsPad {
-    background-color:#f06d06;
-    color:white;
-    padding:20px;
-    font-weight:bold;
-    width:30%;
-    max-height:40%;
-    font-size:200%;
 }
 
 .glyphicon {
@@ -60,7 +53,6 @@
 }
 
 .glyphicon-circle-arrow-up, .glyphicon-circle-arrow-down {
-    float:right;
     font-size:300%;
 }
 
@@ -69,11 +61,6 @@
 }
 .padRight {
     margin-right:10px;
-}
-
-
-#findForm {
-
 }
 
 #findForm h3:first-of-type input {
